# apollo_settings

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
apollo_settings/: __init__.py  client.py  core.py
appolo_settings/: __init__.py  client.py  core.py
